--- a/GameOn/app/src/main/res/layout/activity_main.xml
+++ b/GameOn/app/src/main/res/layout/activity_main.xml
@@ -19,4 +19,13 @@
         android:layout_centerHorizontal="true"
         android:id="@+id/textView2"
         android:textSize="36sp" />
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:srcCompat="@drawable/gameonlogo"
+        android:layout_above="@+id/textView2"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="55dp"
+        android:id="@+id/imageView" />
 </RelativeLayout>
