--- a/GameOn/app/src/main/res/layout/splashh.xml
+++ b/GameOn/app/src/main/res/layout/splashh.xml
@@ -27,5 +27,5 @@
         android:layout_above="@+id/textView2"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="55dp"
-        android:id="@+id/imageView" />
+        android:id="@+id/gamelogo" />
 </RelativeLayout>
