--- a/GameOn/app/src/main/res/layout/activity_main.xml
+++ b/GameOn/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_main"
@@ -9,7 +9,9 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.dorma.gameon.MainActivity">
+    tools:context="com.example.dorma.gameon.MainActivity"
+    android:orientation="vertical"
+    android:weightSum="5">
 
     <TextView
         android:text="GAMEON!"
@@ -18,7 +20,8 @@
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true"
         android:id="@+id/textView2"
-        android:textSize="36sp" />
+        android:textSize="36sp"
+        android:layout_weight="1"/>
 
     <ImageView
         android:layout_width="wrap_content"
@@ -26,6 +29,48 @@
         app:srcCompat="@drawable/logo"
         android:layout_above="@+id/textView2"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="55dp"
-        android:id="@+id/imageView" />
-</RelativeLayout>
+        android:id="@+id/imageView"
+        android:layout_weight="1"/>
+
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:id="@+id/sports_layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingBottom="@dimen/activity_vertical_margin"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:paddingTop="@dimen/activity_vertical_margin"
+        tools:context="com.example.dorma.gameon.MainActivity"
+        android:orientation="horizontal"
+        android:layout_weight="1">
+
+        <ImageView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            app:srcCompat="@drawable/tennis"
+            android:id="@+id/tennis_image"
+            android:layout_weight="1"
+             />
+
+        <ImageView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            app:srcCompat="@drawable/tennis"
+            android:layout_weight="1"
+            android:id="@+id/basketball_image"
+             />
+
+        <ImageView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            app:srcCompat="@drawable/tennis"
+            android:layout_weight="1"
+            android:id="@+id/football_image"
+             />
+
+    </LinearLayout>
+
+</LinearLayout>
+
