--- a/GameOn/app/src/main/res/layout/activity_main.xml
+++ b/GameOn/app/src/main/res/layout/activity_main.xml
@@ -11,7 +11,8 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.dorma.gameon.MainActivity"
     android:orientation="vertical"
-    android:weightSum="5">
+    android:weightSum="5.6"
+    android:background="">
 
     <ImageView
         android:layout_width="wrap_content"
@@ -20,7 +21,16 @@
         android:layout_above="@+id/textView2"
         android:layout_centerHorizontal="true"
         android:id="@+id/imageView"
-        android:layout_weight="0.57"/>
+        android:layout_weight="1"/>
+
+    <TextView
+        android:text="Choose your sport:"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/textView"
+        android:layout_weight="0.5"
+        android:gravity="center"
+        android:textAppearance="@android:style/TextAppearance.DeviceDefault.WindowTitle" />
 
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -35,7 +45,7 @@
         tools:context="com.example.dorma.gameon.MainActivity"
         android:orientation="horizontal"
         android:weightSum="3"
-        android:layout_weight="1.06">
+        android:layout_weight="2">
 
         <ImageView
             android:layout_width="0dp"
@@ -45,7 +55,7 @@
             android:layout_weight="1.00"
              />
 
-        <ImageView
+        <bu
             android:layout_width="0dp"
             android:layout_height="match_parent"
             app:srcCompat="@mipmap/basketball2"
@@ -58,17 +68,46 @@
             android:layout_height="match_parent"
             app:srcCompat="@mipmap/soccer2"
             android:layout_weight="1.00"
-            android:id="@+id/football_image"
+            android:id="@+id/soccer_image"
              />
 
     </LinearLayout>
 
-    <Button
-        android:text="GameOn!!!!!"
+    <ImageView
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:id="@+id/button"
-        android:layout_weight="3" />
+        android:layout_height="20dp"
+        app:srcCompat="@mipmap/search"
+        android:layout_weight="2.00"
+        android:id="@+id/searc_now"
+        />
+
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:id="@+id/game_time_layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingBottom="@dimen/activity_vertical_margin"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:paddingTop="@dimen/activity_vertical_margin"
+        tools:context="com.example.dorma.gameon.MainActivity"
+        android:orientation="horizontal"
+        android:weightSum="1"
+        android:layout_weight="0.1">
+
+
+        <Button
+            android:text="Schedule for later"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/schedule"
+            android:layout_weight="1"
+            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+            android:background="@android:color/transparent" />
+
+    </LinearLayout>
+
 
 
 </LinearLayout>
