--- a/GameOn/app/src/main/res/layout/activity_main.xml
+++ b/GameOn/app/src/main/res/layout/activity_main.xml
@@ -12,29 +12,30 @@
     tools:context="com.example.dorma.gameon.MainActivity"
     android:orientation="vertical"
     android:weightSum="5.6"
-    android:background="">
+    android:background="@drawable/new1">
+
 
     <ImageView
         android:layout_width="wrap_content"
-        android:layout_height="0dp"
+        android:layout_height="121dp"
         app:srcCompat="@drawable/logo"
         android:layout_above="@+id/textView2"
         android:layout_centerHorizontal="true"
         android:id="@+id/imageView"
-        android:layout_weight="1"/>
+        android:layout_weight="0.32" />
 
     <TextView
         android:text="Choose your sport:"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/textView"
-        android:layout_weight="0.5"
         android:gravity="center"
-        android:textAppearance="@android:style/TextAppearance.DeviceDefault.WindowTitle" />
+        android:textAppearance="@android:style/TextAppearance.DeviceDefault.WindowTitle"
+        android:fontFamily="casual"
+        android:textColor="@android:color/background_light"
+        android:layout_weight="0.38" />
 
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
+    <LinearLayout
         android:id="@+id/sports_layout"
         android:layout_width="match_parent"
         android:layout_height="0dp"
@@ -50,15 +51,15 @@
         <ImageView
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            app:srcCompat="@mipmap/tennis2"
+            app:srcCompat="@mipmap/bw_tennis"
             android:id="@+id/tennis_image"
             android:layout_weight="1.00"
              />
 
-        <bu
+        <ImageView
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            app:srcCompat="@mipmap/basketball2"
+            app:srcCompat="@mipmap/bw_basketball"
             android:layout_weight="1.00"
             android:id="@+id/basketball_image"
              />
@@ -66,7 +67,7 @@
         <ImageView
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            app:srcCompat="@mipmap/soccer2"
+            app:srcCompat="@mipmap/bw_soccer"
             android:layout_weight="1.00"
             android:id="@+id/soccer_image"
              />
@@ -77,7 +78,7 @@
         android:layout_width="match_parent"
         android:layout_height="20dp"
         app:srcCompat="@mipmap/search"
-        android:layout_weight="2.00"
+        android:layout_weight="2.70"
         android:id="@+id/searc_now"
         />
 
@@ -100,11 +101,12 @@
         <Button
             android:text="Schedule for later"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:id="@+id/schedule"
-            android:layout_weight="1"
             android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-            android:background="@android:color/transparent" />
+            android:background="@android:color/transparent"
+            android:fontFamily="casual"
+            android:textColor="@android:color/background_light" />
 
     </LinearLayout>
 
