--- a/GameOn/app/src/main/res/layout/activity_main.xml
+++ b/GameOn/app/src/main/res/layout/activity_main.xml
@@ -79,7 +79,7 @@
         android:layout_height="20dp"
         app:srcCompat="@mipmap/search"
         android:layout_weight="2.70"
-        android:id="@+id/searc_now"
+        android:id="@+id/search_now"
         />
 
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
