--- a/GameOn/app/src/main/res/layout/activity_main.xml
+++ b/GameOn/app/src/main/res/layout/activity_main.xml
@@ -13,15 +13,6 @@
     android:orientation="vertical"
     android:weightSum="6.62" >
 
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="35dp"
-        app:srcCompat="@drawable/settings"
-        android:layout_marginLeft="280dp"
-        android:id="@+id/imageView"
-        android:layout_weight="0.2"/>
-
-
     <LinearLayout
         android:id="@+id/icons"
         android:layout_width="match_parent"
@@ -42,21 +33,82 @@
             app:srcCompat="@drawable/player1"
             android:layout_weight="1"
             android:id="@+id/player" />
-
-        <ImageView
-            android:layout_width="110dp"
-            android:layout_height="160dp"
-            app:srcCompat="@drawable/playerstat"
-            android:layout_weight="1"
-            android:id="@+id/playerstat" />
+        <TextView
+            android:id="@+id/name"
+            android:layout_width="100dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.5"
+            android:text="TextView" />
         <Space
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1" />
-
+        <TextView
+            android:id="@+id/league"
+            android:layout_width="100dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.5"
+            android:text="TextView" />
 
 
     </LinearLayout>
+    <LinearLayout
+        android:id="@+id/time_layout"
+        android:layout_width="match_parent"
+        android:layout_height="55dp"
+        android:paddingBottom="@dimen/activity_vertical_margin"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:paddingTop="@dimen/activity_vertical_margin"
+        tools:context="com.example.dorma.gameon.MainActivity"
+        android:orientation="horizontal"
+        android:weightSum="2.3"
+        android:layout_weight="0.62">
+
+        <Space
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.1" />
+
+        <Button
+            android:text="Start"
+            android:layout_width="0dp"
+            android:layout_height="50dp"
+            android:id="@+id/starttime"
+            android:gravity="center"
+            android:textAppearance="@android:style/TextAppearance.DeviceDefault.WindowTitle"
+            android:fontFamily="sans-serif"
+            android:textColor="@color/colorPrimaryDark"
+            android:layout_weight="1"
+            android:textSize="24sp"
+            android:elevation="4dp"
+            android:textStyle="bold" />
+
+        <Space
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.1" />
+
+        <Button
+            android:text="End"
+            android:layout_width="0dp"
+            android:layout_height="50dp"
+            android:id="@+id/endtime"
+            android:gravity="center"
+            android:textAppearance="@android:style/TextAppearance.DeviceDefault.WindowTitle"
+            android:fontFamily="sans-serif"
+            android:textColor="@color/colorPrimaryDark"
+            android:layout_weight="1"
+            android:textSize="24sp"
+            android:elevation="4dp"
+            android:textStyle="bold" />
+        <Space
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.1" />
+
+    </LinearLayout>
+
 
     <TextView
         android:text="Choose your game:"
