--- a/GameOn/app/src/main/res/layout/activity_main.xml
+++ b/GameOn/app/src/main/res/layout/activity_main.xml
@@ -30,7 +30,7 @@
         <ImageView
             android:layout_width="120dp"
             android:layout_height="110dp"
-            app:srcCompat="@drawable/player1"
+            app:srcCompat="@drawable/bw_basketball"
             android:layout_weight="1"
             android:id="@+id/player" />
         <TextView
