--- a/GameOn/app/src/main/res/layout/found_opponent.xml
+++ b/GameOn/app/src/main/res/layout/found_opponent.xml
@@ -1,55 +1,259 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/foundoppoid"
+    android:id="@+id/found_opponent"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.dorma.gameon.MainActivity"
-    android:background="@drawable/foundoppo">
+    android:weightSum="6.62"
+    tools:context="com.example.dorma.gameon.Found_opponent">
+
+    <LinearLayout
+        android:id="@+id/icons"
+        android:layout_width="match_parent"
+        android:layout_height="67dp"
+        android:layout_weight="3"
+        android:orientation="horizontal"
+        android:paddingBottom="@dimen/activity_vertical_margin"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:paddingTop="@dimen/activity_vertical_margin"
+        android:weightSum="4"
+        tools:context="com.example.dorma.gameon.MainActivity">
+
+
+        <ImageView
+            android:id="@+id/player_image"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            app:srcCompat="@drawable/bw_basketball" />
+
+        <LinearLayout
+            android:id="@+id/player_stat"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:orientation="vertical"
+            android:paddingBottom="@dimen/activity_vertical_margin"
+            android:paddingLeft="@dimen/activity_horizontal_margin"
+            android:paddingRight="@dimen/activity_horizontal_margin"
+            android:paddingTop="@dimen/activity_vertical_margin"
+            android:weightSum="2"
+            tools:context="com.example.dorma.gameon.MainActivity">
+
+            <TextView
+                android:id="@+id/player_name"
+                android:layout_width="wrap_content"
+                android:layout_height="0dp"
+                android:layout_weight="0.5"
+                android:text="TextView" />
+
+            <Space
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:layout_weight="1" />
+
+            <TextView
+                android:id="@+id/player_league"
+                android:layout_width="wrap_content"
+                android:layout_height="0dp"
+                android:layout_weight="0.5"
+                android:text="TextView" />
+
+        </LinearLayout>
+
+        <ImageView
+            android:id="@+id/oppo_image"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            app:srcCompat="@drawable/bw_basketball" />
+
+        <LinearLayout
+            android:id="@+id/oppo_stat"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:orientation="vertical"
+            android:paddingBottom="@dimen/activity_vertical_margin"
+            android:paddingLeft="@dimen/activity_horizontal_margin"
+            android:paddingRight="@dimen/activity_horizontal_margin"
+            android:paddingTop="@dimen/activity_vertical_margin"
+            android:weightSum="2"
+            tools:context="com.example.dorma.gameon.MainActivity">
+
+            <TextView
+                android:id="@+id/oppo_name"
+                android:layout_width="wrap_content"
+                android:layout_height="0dp"
+                android:layout_weight="0.5"
+                android:text="TextView" />
+
+            <Space
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1" />
+
+            <TextView
+                android:id="@+id/oppo_league"
+                android:layout_width="wrap_content"
+                android:layout_height="0dp"
+                android:layout_weight="0.5"
+                android:text="TextView" />
+
+        </LinearLayout>
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/time_layout"
+        android:layout_width="match_parent"
+        android:layout_height="55dp"
+        android:layout_weight="0.62"
+        android:orientation="horizontal"
+        android:paddingBottom="@dimen/activity_vertical_margin"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:paddingTop="@dimen/activity_vertical_margin"
+        android:weightSum="2.3"
+        tools:context="com.example.dorma.gameon.MainActivity">
+
+        <Space
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.1" />
+
+        <Button
+            android:id="@+id/starttime"
+            android:layout_width="0dp"
+            android:layout_height="50dp"
+            android:layout_weight="1"
+            android:elevation="4dp"
+            android:fontFamily="sans-serif"
+            android:gravity="center"
+            android:text="Start"
+            android:textAppearance="@android:style/TextAppearance.DeviceDefault.WindowTitle"
+            android:textColor="@color/colorPrimaryDark"
+            android:textSize="24sp"
+            android:textStyle="bold" />
+
+        <Space
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.1" />
+
+        <Button
+            android:id="@+id/endtime"
+            android:layout_width="0dp"
+            android:layout_height="50dp"
+            android:layout_weight="1"
+            android:elevation="4dp"
+            android:fontFamily="sans-serif"
+            android:gravity="center"
+            android:text="End"
+            android:textAppearance="@android:style/TextAppearance.DeviceDefault.WindowTitle"
+            android:textColor="@color/colorPrimaryDark"
+            android:textSize="24sp"
+            android:textStyle="bold" />
+
+        <Space
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.1" />
+
+    </LinearLayout>
+
 
     <TextView
-        android:text="Got A Ball?"
+        android:id="@+id/textView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/gotball2"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginBottom="234dp" />
+        android:layout_weight="0.8"
+        android:elevation="4dp"
+        android:fontFamily="sans-serif"
+        android:gravity="center"
+        android:text="Choose your game:"
+        android:textAppearance="@android:style/TextAppearance.DeviceDefault.WindowTitle"
+        android:textColor="@color/colorPrimaryDark"
+        android:textSize="24sp"
+        android:textStyle="bold" />
 
-    <CheckBox
-        android:text="Got A Ball?"
+    <LinearLayout
+        android:id="@+id/sports_layout"
         android:layout_width="match_parent"
+        android:layout_height="114dp"
+        android:layout_weight="0.62"
+        android:orientation="horizontal"
+        android:paddingBottom="@dimen/activity_vertical_margin"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:paddingTop="@dimen/activity_vertical_margin"
+        android:weightSum="3.2"
+        tools:context="com.example.dorma.gameon.MainActivity">
+
+        <CheckBox
+            android:id="@+id/tennis_image"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1.00"
+            android:background="@drawable/tennis_selector"
+            android:button="@android:color/transparent" />
+
+        <Space
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.1" />
+
+        <CheckBox
+            android:id="@+id/basketball_image"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1.00"
+            android:background="@drawable/basketball_selector"
+            android:button="@android:color/transparent" />
+
+        <Space
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.1" />
+
+        <CheckBox
+            android:id="@+id/soccer_image"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1.00"
+            android:background="@drawable/soccer_selector"
+            android:button="@android:color/transparent" />
+
+
+    </LinearLayout>
+
+    <ImageView
+        android:id="@+id/search_now"
+        android:layout_width="130dp"
+        android:layout_height="120dp"
+        android:layout_gravity="center"
+        android:layout_weight="2"
+        android:src="@drawable/powerbutton2" />
+
+    <!--<FrameLayout android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/gotball1"
-        android:layout_alignBaseline="@+id/gotball2"
-        android:layout_alignBottom="@+id/gotball2"
-        android:layout_alignStart="@+id/ready1" />
-
-    <ToggleButton
-        android:textOff="NOT Ready!"
-        android:textOn="Ready!"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="43dp"
-        android:id="@+id/ready2"
-        android:layout_below="@+id/gotball1"
-        android:layout_alignParentStart="true" />
-
-    <Button
-        android:text="Ready!"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/ready1"
-        android:layout_marginEnd="26dp"
-        android:layout_below="@+id/gotball1"
-        android:layout_alignParentEnd="true" />
+        android:layout_gravity="center">
 
 
 
-</RelativeLayout>
+        <ImageView android:layout_width="216dp"
+            android:layout_height="170dp"
+            android:src="@drawable/circle1"
+            android:layout_gravity="center"
+            android:id="@+id/search_round"/>
 
+    </FrameLayout>-->
+
+
+</LinearLayout>
