--- a/GameOn/app/src/main/res/drawable/baseball_selector.xml
+++ b/GameOn/app/src/main/res/drawable/baseball_selector.xml
@@ -3,10 +3,10 @@
     android:constantSize="true" >
 
     <item
-        android:drawable="@drawable/tennis"
+        android:drawable="@drawable/baseball"
         android:state_checked="false" />
 
     <item
-        android:drawable="@drawable/activetennis"
+        android:drawable="@drawable/activebaseball"
         android:state_checked="true" />
 </selector>
