--- a/GameOn/app/src/main/res/drawable/basketball_selector.xml
+++ b/GameOn/app/src/main/res/drawable/basketball_selector.xml
@@ -3,10 +3,10 @@
     android:constantSize="true" >
 
     <item
-        android:drawable="@drawable/bw_basketball"
+        android:drawable="@drawable/basketball"
         android:state_checked="false" />
 
     <item
-        android:drawable="@drawable/check_bw_basketball"
+        android:drawable="@drawable/activebasketball"
         android:state_checked="true" />
 </selector>
