--- a/GameOn/app/src/main/res/layout/activity_main.xml
+++ b/GameOn/app/src/main/res/layout/activity_main.xml
@@ -11,59 +11,85 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.dorma.gameon.MainActivity"
     android:orientation="vertical"
-    android:weightSum="6.62" >
+    android:background="@drawable/background"
+    android:weightSum="11" >
 
     <LinearLayout
         android:id="@+id/icons"
-        android:layout_width="match_parent"
-        android:layout_height="67dp"
+        android:layout_width="wrap_content"
+        android:layout_height="0dp"
+        android:layout_weight="3"
+        android:orientation="horizontal"
         android:paddingBottom="@dimen/activity_vertical_margin"
         android:paddingLeft="@dimen/activity_horizontal_margin"
         android:paddingRight="@dimen/activity_horizontal_margin"
         android:paddingTop="@dimen/activity_vertical_margin"
-        tools:context="com.example.dorma.gameon.MainActivity"
-        android:orientation="horizontal"
-        android:weightSum="3"
-        android:layout_weight="3">
+        android:weightSum="2"
+        tools:context="com.example.dorma.gameon.MainActivity">
 
 
         <ImageView
-            android:layout_width="120dp"
-            android:layout_height="110dp"
-            app:srcCompat="@drawable/bw_basketball"
-            android:layout_weight="1"
-            android:id="@+id/player" />
-        <TextView
-            android:id="@+id/name"
-            android:layout_width="100dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="0.5"
-            android:text="TextView" />
-        <Space
+            android:id="@+id/player_image"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1" />
-        <TextView
-            android:id="@+id/league"
-            android:layout_width="100dp"
+            android:layout_weight="1"
+            app:srcCompat="@drawable/profilebackground" />
+
+        <LinearLayout
+            android:id="@+id/player_stat"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="0.5"
-            android:text="TextView" />
+            android:layout_weight="1"
+            android:orientation="vertical"
+            android:paddingBottom="@dimen/activity_vertical_margin"
+            android:paddingLeft="@dimen/activity_horizontal_margin"
+            android:paddingRight="@dimen/activity_horizontal_margin"
+            android:paddingTop="@dimen/activity_vertical_margin"
+            android:weightSum="2"
+            tools:context="com.example.dorma.gameon.MainActivity">
+            <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                android:layout_width="wrap_content"
+                android:layout_height="2dp"
+                android:layout_weight="1"
+                android:layout_gravity="bottom"
+                android:layout_marginBottom="0dp">
 
+                <ImageView
+                    android:src="@drawable/playernameback"
+                    android:scaleType="fitCenter"
+                    android:layout_height="30dp"
+                    android:layout_width="150dp"/>
 
+                <TextView
+                    android:text="matan"
+                    android:textSize="15dp"
+                    android:textStyle="bold"
+                    android:textColor="#FFFFFF"
+                    android:layout_height="fill_parent"
+                    android:layout_width="fill_parent"
+                    android:gravity="center"/>
+            </FrameLayout>
+            <ImageView
+                android:id="@+id/player_name"
+                android:layout_width="wrap_content"
+                android:layout_height="0dp"
+                android:layout_weight="1"
+                app:srcCompat="@drawable/playerlevelback" />
+
+        </LinearLayout>
     </LinearLayout>
     <LinearLayout
         android:id="@+id/time_layout"
-        android:layout_width="match_parent"
-        android:layout_height="55dp"
+        android:layout_width="wrap_content"
+        android:layout_height="0dp"
         android:paddingBottom="@dimen/activity_vertical_margin"
         android:paddingLeft="@dimen/activity_horizontal_margin"
         android:paddingRight="@dimen/activity_horizontal_margin"
         android:paddingTop="@dimen/activity_vertical_margin"
         tools:context="com.example.dorma.gameon.MainActivity"
         android:orientation="horizontal"
-        android:weightSum="2.3"
-        android:layout_weight="0.62">
+        android:weightSum="2"
+        android:layout_weight="2">
 
         <Space
             android:layout_width="0dp"
@@ -112,38 +138,38 @@
 
     <TextView
         android:text="Choose your game:"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
+        android:layout_height="0dp"
         android:id="@+id/textView"
         android:gravity="center"
         android:textAppearance="@android:style/TextAppearance.DeviceDefault.WindowTitle"
         android:fontFamily="sans-serif"
         android:textColor="@color/colorPrimaryDark"
-        android:layout_weight="0.8"
+        android:layout_weight="1"
         android:textSize="24sp"
         android:elevation="4dp"
         android:textStyle="bold" />
 
     <LinearLayout
         android:id="@+id/sports_layout"
-        android:layout_width="match_parent"
-        android:layout_height="114dp"
+        android:layout_width="wrap_content"
+        android:layout_height="0dp"
         android:paddingBottom="@dimen/activity_vertical_margin"
         android:paddingLeft="@dimen/activity_horizontal_margin"
         android:paddingRight="@dimen/activity_horizontal_margin"
         android:paddingTop="@dimen/activity_vertical_margin"
         tools:context="com.example.dorma.gameon.MainActivity"
         android:orientation="horizontal"
-        android:weightSum="3.2"
-        android:layout_weight="0.62">
+        android:weightSum="3"
+        android:layout_weight="2">
 
         <CheckBox
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:background="@drawable/tennis_selector"
+            android:button="@android:color/transparent"
             android:layout_weight="1.00"
             android:id="@+id/tennis_image"
-            android:button="@android:color/transparent"
             />
         <Space
             android:layout_width="0dp"
@@ -176,12 +202,19 @@
 
     </LinearLayout>
 
-    <ImageView android:layout_width="130dp"
-        android:layout_height="120dp"
-        android:src="@drawable/powerbutton2"
+    <ImageView android:layout_width="wrap_content"
+        android:layout_height="0dp"
+        android:src="@drawable/search"
         android:id="@+id/search_now"
         android:layout_gravity="center"
         android:layout_weight="2"/>
+
+    <ImageView android:layout_width="wrap_content"
+        android:layout_height="0dp"
+        android:src="@drawable/settings"
+        android:id="@+id/menu"
+        android:layout_gravity="center|bottom"
+        android:layout_weight="1"/>
 
     <!--<FrameLayout android:layout_width="wrap_content"
         android:layout_height="wrap_content"
